# parameter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.github/workflows/: python-app.yml
src/module0/: module0.py
src/parameter/: conversion.py  parameter.py
test/: conftest.py  input_file.yaml  test_parameter.py
